<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pl.mzebrows.shoots</groupId>
  <artifactId>Shoots-Vibe-Refactor</artifactId>
  <version>1.1</version>
  <packaging>jar</packaging>

  <name>Shoots-Vibe-Refactor</name>
  <url>http://maven.apache.org</url>

  <properties>
    <argLine></argLine>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>25</maven.compiler.release>

    <lombok.version>1.18.46</lombok.version>
    <slf4j.version>2.0.17</slf4j.version>
    <junit.version>5.13.4</junit.version>
    <assertj.version>3.27.6</assertj.version>
    <mockito.version>5.20.0</mockito.version>

    <!-- OpenRewrite: dormant codemod tool, NOT part of normal builds. See tools/OpenRewritePlan.md.
         Pin these to versions seeded into tools/.m2 (or run on a networked host). -->
    <rewrite.maven.plugin.version>6.42.0</rewrite.maven.plugin.version>
    <rewrite.static-analysis.version>2.37.0</rewrite.static-analysis.version>
    <rewrite.migrate-java.version>3.37.0</rewrite.migrate-java.version>

    <!-- Build output directory. Override with -Dbuild.dir=/some/local/path to keep
         target/ off a network/9p mount (avoids stale-class + file-lock issues). The
         mvnw wrapper sets this automatically inside the Linux sandbox. -->
    <build.dir>${project.basedir}/target</build.dir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <directory>${build.dir}</directory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <nonFilteredFileExtensions>
            <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
            <nonFilteredFileExtension>TTF</nonFilteredFileExtension>
            <nonFilteredFileExtension>png</nonFilteredFileExtension>
            <nonFilteredFileExtension>jpg</nonFilteredFileExtension>
            <nonFilteredFileExtension>wav</nonFilteredFileExtension>
          </nonFilteredFileExtensions>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>25</release>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <configuration>
          <workingDirectory>${project.build.directory}</workingDirectory>
          <!--suppress MavenModelInspection -->
          <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
        </configuration>
      </plugin>

      <!-- OpenRewrite (DORMANT): does nothing during a normal `mvn`/`./mvnw` build. It only
           acts when invoked explicitly: `./mvnw rewrite:dryRun` / `rewrite:run`. Only Cluster 1
           (imports + dead code) is active below; enable later clusters per tools/OpenRewritePlan.md.
           NOTE: recipe JARs are not in the offline tools/.m2 yet — seed them or run on a host
           with network access first (see the plan). -->
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>${rewrite.maven.plugin.version}</version>
        <configuration>
          <activeRecipes>
            <!-- Cluster 1 — imports & dead code (lowest risk). Review every dry-run on
                 Lombok @Getter/@Setter classes before running (see plan caveats). -->
            <recipe>org.openrewrite.java.RemoveUnusedImports</recipe>
            <recipe>org.openrewrite.staticanalysis.RemoveUnusedLocalVariables</recipe>
            <recipe>org.openrewrite.staticanalysis.RemoveUnusedPrivateMethods</recipe>
            <recipe>org.openrewrite.staticanalysis.UnnecessaryThrows</recipe>
            <recipe>org.openrewrite.staticanalysis.RemoveExtraSemicolons</recipe>
            <recipe>org.openrewrite.staticanalysis.EqualsAvoidsNull</recipe>
            <recipe>org.openrewrite.staticanalysis.LambdaBlockToExpression</recipe>
            <recipe>org.openrewrite.staticanalysis.MissingOverrideAnnotation</recipe>
            <recipe>org.openrewrite.java.migrate.UpgradeToJava25</recipe>
          </activeRecipes>
          <exclusions>
            <exclusion>tools/**</exclusion>
          </exclusions>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-static-analysis</artifactId>
            <version>${rewrite.static-analysis.version}</version>
          </dependency>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>${rewrite.migrate-java.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>build-win-executable</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.6.2</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <filters>
                    <filter>
                      <artifact>*:*</artifact>
                      <excludes>
                        <exclude>META-INF/*.SF</exclude>
                        <exclude>META-INF/*.DSA</exclude>
                        <exclude>META-INF/*.RSA</exclude>
                      </excludes>
                    </filter>
                  </filters>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.6.3</version>
            <executions>
              <execution>
                <id>create-jpackage</id>
                <phase>install</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument>
                    <argument>app-image</argument>
                    <argument>--name</argument>
                    <argument>ProjectShoots-${project.version}</argument>
                    <argument>--input</argument>
                    <argument>${project.build.directory}</argument>
                    <argument>--main-jar</argument>
                    <argument>${project.build.finalName}.jar</argument>
                    <argument>--main-class</argument>
                    <argument>pl.mzebrows.shoots.ProjectShoots</argument>
                    <argument>--dest</argument>
                    <argument>${project.build.directory}/dist</argument>
                    <argument>--dest</argument>
                    <argument>${project.build.directory}/dist</argument>
                    <argument>--win-console</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
